--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "@types/react-dom": "^18.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
+    "styled-component": "^2.8.0",
+    "styled-components": "^5.3.9",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
@@ -26,7 +29,6 @@
     "react-start": "BROWSER=none yarn start",
     "electron-start": "ELECTRON_START_URL=http://localhost:3000 electron .",
     "electron-pack": "yarn build && electron-builder build -c.extraMetadata.main=build/Main.js"
-    
   },
   "eslintConfig": {
     "extends": [
@@ -47,6 +49,7 @@
     ]
   },
   "devDependencies": {
+    "@types/styled-components": "^5.1.26",
     "concurrently": "^8.0.1",
     "electron": "^23.2.0",
     "electron-builder": "^23.6.0",
