--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
+    "react-transition-group": "^4.4.5",
     "styled-component": "^2.8.0",
     "styled-components": "^5.3.9",
     "typescript": "^4.4.2",
